# voitta-rag

./: .env.example  .env.sample  .gitignore  Dockerfile  MCP_SSE_TESTING.md  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.claude/: import-docs-handoff.md  settings.local.json
.handoffs/: 2026-05-04-import-repos-target-machine.md
claude-plugin/: README.md  setup.sh
claude-plugin/hooks/: session-memory.py  session-memory.sh
docs/: sharepoint-permissions-research.md
scripts/: build_sparse_vectors.py  export_repos.py  import_claude_history.py  import_repos.example.json  import_repos.py  mineru_parse.py  sync_qdrant_stats.py
src/voitta/: __init__.py  config.py  main.py  mcp_server.py
src/voitta/api/: deps.py
src/voitta/api/routes/: __init__.py  auth.py  details.py  files.py  folders.py  index.py  metadata.py  pages.py  projects.py  raw.py  settings.py  sync.py  websocket.py
src/voitta/db/: __init__.py  database.py  models.py
src/voitta/services/: __init__.py  anamnesis.py  chunking.py  embedding.py  filesystem.py  indexing.py  indexing_worker.py  metadata.py  sparse_embedding.py  vector_store.py  watcher.py
src/voitta/services/parsers/: __init__.py  azw3_parser.py  base.py  docx_parser.py  epub_parser.py  gdoc_parser.py  odf_parser.py  pdf_parser.py  pptx_parser.py  registry.py  text_parser.py  vtt_parser.py  xlsx_parser.py
src/voitta/services/sync/: __init__.py  azure_devops.py  base.py  box.py  confluence.py  filesystem.py  github.py  glue_catalog.py  google_drive.py  jira.py  sharepoint.py  teams_transcripts.py
src/voitta/web/: __init__.py
src/voitta/web/templates/: _file_list_items.html  base.html  browser.html  landing.html
static/css/: styles.css
static/js/: app.js  file-ops.js  folder-ops.js  projects.js  sidebar.js  state.js  sync.js  theme.js  ui.js  websocket.js  ws-handlers.js
tests/: __init__.py  conftest.py  test_api.py
