[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voitta-rag"
version = "0.1.0"
description = "Web-based file management system with real-time monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    # Document parsers
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.0",
    # Indexing and RAG
    "sentence-transformers>=2.2.0",
    "transformers>=4.36.0",
    "qdrant-client>=1.7.0",
    "torch>=2.0.0",
    # MCP server
    "fastmcp>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voitta"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
